--- a/index.html
+++ b/index.html
@@ -13,26 +13,36 @@
   <body>
     <!-- Sidebar -->
     <div class="sidebar">
-      <h1>Divvy Bike-share Station Hourly Departure Projection</h1>
-    <div class="slide1">
-      <div id="intro">
-        <h2>Introduction</h2>
-        <p class="intro">In  2013, the city of Chicago lauched <a href="https://www.divvybikes.com">Divvy bike share system</a>.
-          As a new mode that facilitates short distance travels and transit rides,
-          the system is popular across the town. However, the unbalanced bike flows hamper
-          the operation and expansion of the system. On the one hand, it results in full
-          or empty station frequently, downgrading the reliability of the system.
-          On the other hand, bike reallocation, solution to this problem, is based on
-          real-time activity, which is costy and lagging behind.</p>
-        <p class="intro">While the unbalanced bike flow is inherented, pro-active reallocation has the potential
-          to reduce the cost and reduce loss of customers. Therefore, this project is designed to
-          build a OLS model to project the hourly departure for 147 stations near downtown Loop.</p>
-      <hr></hr>
+    <h1>Divvy Bike-share Station Hourly Departure Projection</h1>
+      <div class="slide1">
+        <div id="intro">
+          <h2>Introduction</h2>
+          <p class="intro">In  2013, the city of Chicago lauched
+            <a href="https://www.divvybikes.com">Divvy bike share system</a>.
+            As a new mode that facilitates short distance travels and transit rides,
+            the system is popular across the town. However, the unbalanced bike flows hamper
+            the operation and expansion of the system. On the one hand, it results in full
+            or empty station frequently, downgrading the reliability of the system.
+            On the other hand, bike reallocation, solution to this problem, is based on
+            real-time activity, which is costy and lagging behind.</p>
+          <p class="intro">While the unbalanced bike flow is inherented, pro-active reallocation has the potential
+            to reduce the cost and reduce loss of customers. Therefore, this project is designed to
+            build a OLS model to project the hourly departure for 147 stations near downtown Loop.</p>
+          <hr></hr>
+          <h2>Model Building</h2>
+          <p>The model was built on 147 stations near downtown Chicago for the second week of June in 2017, because there
+            are greater rebalancing demand due to the prominent commuting patterns in warm days. During model building
+            process, candidate predictors are selected based on their explanatory power and the selection was finalized
+            by model generalizability suggested by cross-validation</p>
+          <p>Before start, take a look at the accumulated departures in each stations for a weekday</p>
+        </div>
       </div>
-      <div id = "explore">
-        <h2>Observed Hourly Departure Difference Across Locations and Times</h2>
-        <p>To know more about the problem, simply start by looking at the observed differences in
-          hourly departure of these stations. Select weekday and hour to continue.</p>
+    <div class="slide2" style="display: none;">
+      <h2>Observe Hourly Departure Difference Across Locations and Times</h2>
+      <p>To build the predictive model for hourly departures, the biggest challenge is that the our dependent variables
+          are highly spatial- and serial- correlated because demands are usually concentrated in certain time period and location.</p>
+      <p>To Learn more about the problem, select day and time to explore.</p>
+      <div>
         <p>Select a day</p>
         <select id="aweek">
           <option>Weekday</option>
@@ -70,21 +80,17 @@
       </div>
     </div>
 
-    <div class="slide2" style="display: none;">
+    <div class="slide3" style="display: none;">
         <h2>Predictors: Station Area Predictor Exploration</h2>
-        <p>To build the predictive model for hourly departures, we included four type of varibles,
-          namesly spatially-and-temporally lagged hourly depatures, socio-economic and bike network
-          characteristics of station areas, distance to and average ridership of nearest transit stations
-          for each bike station, and time of depatures. The last three types are all theoritically related
-          to bike trip demand, and the first type, including historical depatures at the same station and
-          neighboring station departures, are assumed to be similar to the dependent variable because
-          demands are usually concentrated in certain time period and location. </p>
-        <p>For purpose of illustration, this page mainly illustrate major station area properties, including
-          employment and population density, median household income, bike lane length, and number of Transit Stations
-          within station area. Station area is defined by 0.5-mile buffer around stations. The origional data comes from
-          ACS census, and Chicago Open Data, and they are summarized and exported in ArcGIS through Spatial Join.</p>
+        <p>Apart from the previously mentioned lag variables, the model also includes socio-economic and bike network
+          characteristics of station areas, distance to and average ridership of nearest transit stations for each
+          bike station, and time of depatures. They are all theoritically related to bike trip demand. </p>
+        <p>This page takes a deeper look at station area variables, including employment and population density, median
+          household income, bike lane length, and number of Transit Stations within station area. Station area is
+          defined by 0.5-mile buffer around stations. The origional data comes from ACS census, and Chicago Open Data,
+          and they are summarized and exported in ArcGIS through Spatial Join.</p>
         <hr></hr>
-        <p>Start by selecting interesting predictors</p>
+        <p>Start by selecting interesting station area predictors</p>
         <select>
           <option>Employment Density</option>
           <option>Population Density</option>
@@ -95,28 +101,29 @@
         <button id = "s2">Plot!</button>
     </div>
 
-    <div class="slide3" style="display: none;">
-        <h2>Predictors: Serial and Spatial Lag Variables</h2>
-        <p>Our previous research suggests that there are promonent correlation among the hourly depatures of a station,
-        the hourly departures a week ago in the same hour, and the hourly departures a week ago in the same hour at neares neighbor station</p>
-        <img src="/images/add.jpg" alt="Serial and Spatial Correlation" style="width:128px;height:128px;">
+
+    <div class="slide4" style="display: none;">
+        <h2>Prediction Results</h2>
+        <p>To predict for the future We use linear regression model to predict hourly departure. Start </p>
         <hr></hr>
-        <p>Start by selecting interesting predictors</p>
-        <select>
-          <option>Employment Density</option>
-          <option>Population Density</option>
-          <option>Median Household Income</option>
-          <option>Bike Lane Length</option>
-          <option>Transit Stations Nearby</option>
-        </select>
-        <button id = "s2">Plot!</button>
+        <p>The</p>
+
     </div>
+
+    <div class="slide5" style="display: none;">
+        <h2>Model Residuels</h2>
+        <p>hold </p>
+        <hr></hr>
+        <p>The</p>
+
+    </div>
+
     </div>
 
 
     <!--Slides-->
     <div>
-      <a class="prev" >&#10094;</a>
+      <a class="prev" style="display:none;">&#10094;</a>
       <a class="next" >&#10095;</a>
     </div>
 
