--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             process, candidate predictors are selected based on their explanatory power and the selection was finalized
             by model generalizability suggested by cross-validation</p>
           <p>Before start, take a look at the accumulated departures in each stations for a weekday</p>
+          <button id="s">Show<button>
         </div>
       </div>
     <div class="slide2" style="display: none;">
@@ -77,7 +78,9 @@
           <option>23</option>
         </select>
         <button id="s1"> Plot! </button>
+        <hr></hr>
       </div>
+        <p>Click any station you are interested in to zoom in and see details in popup windows.</p>
     </div>
 
     <div class="slide3" style="display: none;">
@@ -91,11 +94,10 @@
           and they are summarized and exported in ArcGIS through Spatial Join.</p>
         <hr></hr>
         <p>Start by selecting interesting station area predictors</p>
-        <select>
+        <select id ="apredictor">
           <option>Employment Density</option>
           <option>Population Density</option>
           <option>Median Household Income</option>
-          <option>Bike Lane Length</option>
           <option>Transit Stations Nearby</option>
         </select>
         <button id = "s2">Plot!</button>
@@ -129,6 +131,7 @@
 
     <!-- Map -->
     <div id="map" class="map"></div>
+
 
     <!-- Legend -->
     <div class="legend" style="display:none;">
